mongo-deployment-hostpath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: pavithra-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb       
        image: mongo:7-jammy
        ports:
        - containerPort: 27017
        resources:
            limits:
              memory: "512Mi"
              cpu: "200m"
            requests:
              memory: "256Mi"
              cpu: "100m"
        volumeMounts:
          - name: fitness-volume
            mountPath: /data/db
      volumes:
        - name: fitness-volume
          hostPath: 
            path: /UST
            type: DirectoryOrCreate
            #sizeLimit: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: pavithra-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
